# bsl-lang

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yaml  ci.yml  docker-publish.yml  npm-publish.yml  pages.yml  release.yaml
benchmarks/: __init__.py  bench_latency.py  bench_memory.py  bench_throughput.py  compare.py  conftest.py
docs/: UPGRADE_TO_AGENTFORGE.md  architecture.md  index.md
editors/jetbrains/: build.gradle.kts  gradle.properties  settings.gradle.kts
editors/vscode/: language-configuration.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: bsl.tmLanguage.json
examples/: 01_quickstart.py  02_validation.py  03_formatting_linting.py  04_diff_versioning.py  05_schema_export.py  06_bslspec_convenience.py  07_multi_agent_specs.py  README.md
src/bsl/: __init__.py  convenience.py
src/bsl/ast/: __init__.py  nodes.py  serializer.py
src/bsl/cli/: __init__.py  main.py
src/bsl/compiler/: __init__.py  base.py  code_generator.py  pytest_target.py  (+1 more)
templates/: code_reviewer.bsl  content_moderator.bsl  customer_service.bsl  data_analyst.bsl  research_assistant.bsl
tests/: conftest.py  test_benchmarks.py  test_quickstart.py
tests/integration/: __init__.py
tests/test_compiler/: __init__.py  test_code_generator.py  test_end_to_end.py  test_pytest_target.py
tests/test_diff/: test_differ.py
tests/test_exporters/: test_eu_ai_act.py
tests/test_nl/: test_compiler_bridge.py
tests/test_templates/: test_library.py
tests/test_testgen/: test_generator.py
tests/unit/: test_ast_nodes.py  test_ast_serializer.py  test_diff.py  test_formatter.py  test_grammar_grammar.py  test_grammar_tokens.py  test_lexer.py  test_linter.py  test_parser.py  test_plugins_registry.py  test_schema.py  test_translate.py  test_validator.py
typescript/: package-lock.json  package.json  tsconfig.json
typescript/src/: client.ts  index.ts  printer.ts  types.ts
(+59 files in other folders)
